@@ -24,6 +24,8 @@
 	* usecode/ucinternal.cc: remove_party_items should return 1 only if it has
 	  really removed any items (fixes Cantra's body in bug #3186722: "SI: Body
 	  issues in Shamino's Castle").
+	* exult.cc: Working around an SDL 1.2 issue with touchpads in full-screen
+	  programs under X11.
 
 2012-12-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Changelog: Previous two entries (what was wrong with me?).
